--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "AgroDivel Checklist",
-  "short_name": "Checklist",
+  "name": "AgroDivel 360",
+  "short_name": "AgroDivel 360",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#228B22",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "assets/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "assets/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
