--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,12 @@
 {
   "type": "module",
   "dependencies": {
+    "dayjs": "^1.11.10",
     "formidable": "^3.5.0",
     "openai": "^4.58.0",
     "pdfkit": "^0.15.0",
+    "quickchart-js": "^3.2.0",
+    "simple-statistics": "^7.8.3",
     "xlsx": "^0.18.5"
   }
 }
